# mjml_nif

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE.md  README.md  mix.exs
.github/: dependabot.yml
.github/workflows/: release.yml  tests.yml
lib/: mjml.ex
lib/mjml/: native.ex  parser_options.ex  render_options.ex
lib/mjml/native/: precompiled.ex
lib/mjml/parser_options/: local_include_loader.ex
native/mjml_nif/: Cargo.toml  README.md
native/mjml_nif/.cargo/: config  config.toml
native/mjml_nif/src/: lib.rs
test/: mjml_test.exs
test/support/: partial.mjml
