[package]
name = "mjml_nif"
version = "5.1.0"
authors = ["Paul Götze"]
edition = "2021"

[lib]
name = "mjml_nif"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
rustler = "0.36.2"
mrml = { version = "5.0", default-features = false, features = ["parse", "render", "local-loader"] }

[features]
default = ["nif_version_2_15"]
nif_version_2_15 = ["rustler/nif_version_2_15"]
nif_version_2_16 = ["rustler/nif_version_2_16"]
