[package]
name = "mjml_nif"
# TODO: when officially released:
# version = "6.0.0"
version = "6.0.0-pre"
authors = ["Paul Götze"]
edition = "2021"

[lib]
name = "mjml_nif"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
rustler = "0.36.2"
# TODO: when officially released:
# mrml = { version = "6.0", default-features = false, features = ["parse", "render", "local-loader"] }
mrml = { git = "https://github.com/jdrouet/mrml", branch = "release-plz-2025-05-20T12-58-25Z", default-features = false, features = ["parse", "render", "local-loader"] }

[features]
default = ["nif_version_2_15"]
nif_version_2_15 = ["rustler/nif_version_2_15"]
nif_version_2_16 = ["rustler/nif_version_2_16"]
